--- a/WindowQuoteProCommon/WindowQuoteProCommon.vcxproj.filters
+++ b/WindowQuoteProCommon/WindowQuoteProCommon.vcxproj.filters
@@ -21,13 +21,10 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Quote.h">
+    <ClInclude Include="Entities\Quote.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="IPricerService.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Enums.h">
+    <ClInclude Include="Entities\Enums.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
