add C++ side of interop

--- a/WindowQuoteProBusinessLogic/WindowQuoteProBusinessLogic.vcxproj.filters
+++ b/WindowQuoteProBusinessLogic/WindowQuoteProBusinessLogic.vcxproj.filters
@@ -30,12 +30,30 @@
     <ClInclude Include="Abstractions\IPricerService.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Interop\iQuoteManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interop\sQuote.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interop\Enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interop\NativeQuoteManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interop\ComRoot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interop\Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="Interop\NativeQuoteManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
