--- a/WindowQuoteProGUI/WindowQuoteProGUI.csproj
+++ b/WindowQuoteProGUI/WindowQuoteProGUI.csproj
@@ -7,6 +7,9 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <Platforms>x64</Platforms>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <BaseOutputPath>..\</BaseOutputPath>
   </PropertyGroup>
 
 </Project>
